Fix user menu spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-@media all and (min-width: 1200px) {
-	.admin-spacing {
-		height: 80px;
-	}
-}
 @media all and (max-width: 1200px) { /* screen size until 1200px */
     .container{
         max-width: 970px;
@@ -327,9 +322,9 @@ h1 {
 	margin-top: 60px;
 }
 
-.user-spacing {
+/*.user-spacing {
 	margin-top: 30px;
-}
+}*/
 
 .main-content h2 {
 	margin-top: 80px;
@@ -607,4 +602,8 @@ h1 {
     font-size: 34px;
     font-weight: bold;
     text-align: center;
+}
+
+.user-spacing {
+	height: 60px;
 }
